--- a/weather-cam/_css/default.css
+++ b/weather-cam/_css/default.css
@@ -1,9 +1,25 @@
 
 @import url( "./root.css" );
 
-html, body{
+html, body {
     width: 100%;
     height: 100%;
     margin: 0;
+    color: var( --base-fg-color );
+    background-color: var( --base-bg-color );
     overflow: hidden;
+}
+
+.video-grid {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+}
+
+.video-grid-cell {
+    height: calc( ( .25vw / 16 ) * 9 );
+}
+
+.video-grid-cell.large-cell {
+    height: calc( ( .50vw / 16 ) * 9 );
+    grid-column: span 2;
 }
