--- a/weather-cam/css/default.css
+++ b/weather-cam/css/default.css
@@ -26,6 +26,15 @@ html, body {
     width: 50%;
 }
 
+.video-grid-cell img {
+    width: 100%;
+    height: 100%;
+}
+
+.video-grid-cell label {
+    width: 100%;
+}
+
 /*
 .video-grid {
     display: grid;
