--- a/weather-cam/css/default.css
+++ b/weather-cam/css/default.css
@@ -11,14 +11,17 @@ html, body {
 }
 
 .video-grid {
+    position: relative;
     width: 100%;
 }
 
 .video-grid tr {
+    position: relative;
     height: calc( ( 25vw / 16 ) * 9 );
 }
 
 .video-grid-cell {
+    position: relative;
     width: 25%;
 }
 
@@ -27,6 +30,7 @@ html, body {
 }
 
 .video-grid-cell img {
+    position: relative;
     width: 100%;
     height: 100%;
 }
@@ -34,20 +38,3 @@ html, body {
 .video-grid-cell label {
     width: 100%;
 }
-
-/*
-.video-grid {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-}
-
-.video-grid-cell {
-    display: block;
-    height: calc( ( .25vw / 16 ) * 9 );
-}
-
-.video-grid-cell.large-cell {
-    height: calc( ( .50vw / 16 ) * 9 );
-    grid-column: span 2;
-}
-*/
