--- a/weather-cam/css/default.css
+++ b/weather-cam/css/default.css
@@ -36,5 +36,8 @@ html, body {
 }
 
 .video-grid-cell label {
+    position: relative;
     width: 100%;
+    bottom: 0px;
+    background-color: #0F0;
 }
