--- a/weather-cam/css/default.css
+++ b/weather-cam/css/default.css
@@ -10,6 +10,18 @@ html, body {
     overflow: hidden;
 }
 
+.flex-container {
+    display: flex;
+    position: absolute;
+    top: 0px;
+    bottom:0px;
+}
+
+.video-container {
+    flex: 1 1 auto;
+    overflow-y: auto;
+}
+
 .video-grid {
     position: relative;
     width: 100%;
