--- a/weather-cam/css/default.css
+++ b/weather-cam/css/default.css
@@ -12,9 +12,9 @@ html, body {
 
 .flex-container {
     display: flex;
-    position: absolute;
-    top: 0px;
-    bottom:0px;
+    width: 100%;
+    height: 100%;
+    flex-flow: column;
 }
 
 .video-container {
