--- a/weather-cam/by-id/tiltshift.css
+++ b/weather-cam/by-id/tiltshift.css
@@ -6,41 +6,41 @@
 }
 
 html, body {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+    width:              100%;
+    height:             100%;
+    overflow:           hidden;
 
-    background-color: black;
+    background-color:   black;
 }
 
 html {
-    filter: var( --color-filter );
+    filter:         var( --color-filter );
     -webkit-filter: var( --color-filter );
 }
 
 body {
-    margin: 0;
+    margin:         0;
     pointer-events: none;
 
     &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        backdrop-filter: blur( 3px );
-        mask: linear-gradient( black 10%, transparent 40%, black 90% );
+        content:            '';
+        position:           absolute;
+        top:                0;
+        left:               0;
+        right:              0;
+        bottom:             0;
+        backdrop-filter:    blur( 3px );
+        mask:               linear-gradient( black 10%, transparent 40%, black 90% );
     }
 }
 
 iframe {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 0px;
-    border: none;
-    width: 100vw;
-    height: calc( ( 100vw / 16 ) * 9 );
-    transform: translateY( -50% );
+    display:    block;
+    position:   absolute;
+    top:        50%;
+    left:       50%;
+    border:     none;
+    width:      max( calc( ( 100vh / 9 ) * 16 ), 100vw );
+    height:     max( calc( ( 100vw / 16 ) * 9 ), 100vh );
+    transform:  translate( -50%, -50% );
 }
