--- a/weather-cam/by-id/tiltshift.css
+++ b/weather-cam/by-id/tiltshift.css
@@ -21,17 +21,17 @@ html {
 body {
     margin:         0;
     pointer-events: none;
+}
 
-    &:after {
-        content:            '';
-        position:           absolute;
-        top:                0;
-        left:               0;
-        right:              0;
-        bottom:             0;
-        backdrop-filter:    blur( 3px );
-        mask:               linear-gradient( black 10%, transparent 40%, black 90% );
-    }
+body:not([blur=none]):after {
+    content:            '';
+    position:           absolute;
+    top:                0;
+    left:               0;
+    right:              0;
+    bottom:             0;
+    backdrop-filter:    blur( 3px );
+    mask:               linear-gradient( black 10%, transparent 40%, black 90% );
 }
 
 iframe {
